--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,10 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+    <% if user_signed_in? %>
+      <%= link_to "sign out", destroy_user_session_path, data: { "turbo-method": :delete } %>
+    <% else %>
+      <%= link_to "sign in", user_session_path %>
+    <% end %>
   </body>
 </html>
